k8s/domains/plans/infra/postgres/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: docker.io/postgres:18
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d plans
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d plans
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
