k8s/domains/plans/infra/postgres/base/plans-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: plans-postgres
spec:
  type: ClusterIP
  selector:
    app: plans-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
